# rem-language

./: CMakeLists.txt  README.md
examples/: arraytest.rem  factorial.rem  hello_world.rem  void_fn.rem
source/: ErrorLogger.cpp  ErrorLogger.hpp  main.cpp  stdlib.hpp  utils.cpp  utils.hpp
source/Interpritator/: Interpritator.cpp  Interpritator.hpp
source/Lexer/: Lexer.cpp  Lexer.hpp  Token.hpp  TokenType.hpp
source/interpreter/: Interpritator.cpp  Interpritator.hpp
source/parser/: Parser.cpp  Parser.hpp  types.hpp
source/parser/ast/: ArrayLiteral.hpp  Assign.cpp  Assign.hpp  BinaryNode.cpp  BinaryNode.hpp  BoolLiteral.hpp  Break.hpp  CharLiteral.hpp  Context.cpp  Context.hpp  Echo.hpp  FunctionCall.cpp  FunctionCall.hpp  FunctionHeaderNode.cpp  FunctionHeaderNode.hpp  GetArrayElementNode.hpp  IfNode.cpp  IfNode.hpp  Node.hpp  NumberConstant.hpp  NumberLiteral.hpp  Operations.hpp  ReturnNode.hpp  Scope.cpp  Scope.hpp  SetArrayElementNode.hpp  StringLiteral.hpp  UnaryNode.hpp  Variable.hpp  while.cpp  while.hpp
